Rename project and add launch script example
Updated project name and added example batch file for launching Cobalt Strike client.